# pactui

./: Cargo.toml
src/: app.rs  cache.rs  config.rs  lock.rs  main.rs  notify.rs  operations.rs  package.rs  search.rs  theme.rs
src/ui/: help_overlay.rs  layout.rs  loading.rs  mod.rs  operation_pane.rs  package_list.rs  preview.rs  search_bar.rs  size_warning.rs  status_bar.rs
